--- a/frontend/src/app/form/form.component.html
+++ b/frontend/src/app/form/form.component.html
@@ -191,6 +191,6 @@
 </div>
 
 <div class="result">
-  Cars per hours per lane : {{result || "No result"}}
+  Cars per hour per lane : {{result || "No result"}}
 </div>
 
